@@ -320,11 +320,9 @@
 
 
 (define-public (output-preview-framework basename book scopes fields )
-  (let* ((outputter  (ly:make-paper-outputter filename
-					      "ps"))
-	 (paper (ly:paper-book-paper book))
+  (let* ((paper (ly:paper-book-paper book))
 	 (systems (ly:paper-book-systems book))
-	 (scale  (ly:output-def-lookup paper 'outputscale ))
+	 (scale  (ly:output-def-lookup paper 'outputscale))
 	 (titles (take-while ly:paper-system-title? systems))
 	 (non-title (find (lambda (x)
 			    (not (ly:paper-system-title? x))) systems))
@@ -332,7 +330,9 @@
 	  (stack-stencils Y DOWN 0.0
 			  (map ly:paper-system-stencil
 			       (append titles (list non-title))))))
-    (dump-stencil-as-EPS paper dump-me basename #t)))
+    (dump-stencil-as-EPS paper dump-me
+			 (format "~a.preview" basename)
+			 #t)))
 
 
 
